@@ -6,6 +6,7 @@
 - Pin fastapi version to 0.60.1
 - Remove titiler.core in favor of starlette settings (#55, author @geospatial-jeff)
 - Add fastapi exception handlers (#56, author @geospatial-jeff)
+- Remove intermediary routers (#57, author @geospatial-jeff)
 
 2.1.2 (2020-06-24)
 ------------------
